@@ -1,10 +1,12 @@
 import os
 import sys
 
+import transaction
 from plone import api
+from plone.testing.z2 import Browser
 
 from vnccollab.theme.settings import AnonymousHomepageSettingsEditForm as \
-    AnonForm
+     AnonForm
 
 from vnccollab.theme.tests.base import IntegrationTestCase
 from vnccollab.theme.testing import VNCCOLLAB_THEME_INTEGRATION_TESTING
@@ -29,6 +31,99 @@ class TestAnonymousHomepageSettings(IntegrationTestCase):
                                     logo=None))
         help_url = api.portal.get_registry_record(AnonForm.help_url_key)
         self.assertEqual(TEST_URL, help_url)
+
+    def test_hide_help_url(self):
+        """Tests if we can hide the Help URL."""
+        anon_form = self._get_anon_settings_form()
+        anon_form.applyChanges(dict(help_url=None,
+                                    delete_logo=False,
+                                    logo=None))
+        self.assertRaises(KeyError, api.portal.get_registry_record,
+                          (AnonForm.help_url_key))
+
+        # now we test if the help url is in the anonymous homepage
+        browser = Browser(self.portal)
+        self.logout(browser)
+        browser.open(self.portal_url)
+        self.assertNotIn('Help', browser.contents)
+
+    def test_set_register_url(self):
+        """Tests if we can set the Register URL."""
+        TEST_URL = 'http://www.google.com'
+
+        anon_form = self._get_anon_settings_form()
+        anon_form.applyChanges(dict(show_register_url=True,
+                                    register_url=TEST_URL,
+                                    delete_logo=False,
+                                    logo=None))
+        register_url = api.portal.get_registry_record(AnonForm.register_url_key)
+        self.assertEqual(TEST_URL, register_url)
+        transaction.commit()
+
+        # Now we test if the register url changed in the anonymous homepage
+        browser = Browser(self.portal)
+        self.logout(browser)
+        browser.open(self.portal_url)
+        self.assertIn('<a href="{0}">Sign Up'.format(TEST_URL), browser.contents)
+
+    def test_hide_register_url(self):
+        """Tests if we can hide the Register URL."""
+        # It should hide register even if it has a value
+        TEST_URL = 'http://www.google.com'
+
+        anon_form = self._get_anon_settings_form()
+        anon_form.applyChanges(dict(show_register_url=False,
+                                    register_url=TEST_URL,
+                                    delete_logo=False,
+                                    logo=None))
+        register_url = api.portal.get_registry_record(AnonForm.register_url_key)
+        self.assertEqual(TEST_URL, register_url)
+        transaction.commit()
+
+        # now we test if the register url isin the anonymous homepage
+        browser = Browser(self.portal)
+        self.logout(browser)
+        browser.open(self.portal_url)
+        self.assertNotIn('sign up', browser.contents)
+
+    def test_set_login_url(self):
+        """Tests if we can set the Login URL."""
+        TEST_URL = 'http://www.google.com'
+
+        anon_form = self._get_anon_settings_form()
+        anon_form.applyChanges(dict(show_login_url=True,
+                                    login_url=TEST_URL,
+                                    delete_logo=False,
+                                    logo=None))
+        login_url = api.portal.get_registry_record(AnonForm.login_url_key)
+        self.assertEqual(TEST_URL, login_url)
+        transaction.commit()
+
+        # Now we test if the login url changed in the anoynomous homepage
+        browser = Browser(self.portal)
+        self.logout(browser)
+        browser.open(self.portal_url)
+        self.assertIn('<a href="{0}">Login'.format(TEST_URL), browser.contents)
+
+    def test_hide_login_url(self):
+        """Tests if we can hide the Login URL."""
+        # It should hide login even if it has a value
+        TEST_URL = 'http://www.google.com'
+
+        anon_form = self._get_anon_settings_form()
+        anon_form.applyChanges(dict(show_login_url=False,
+                                    login_url=TEST_URL,
+                                    delete_logo=False,
+                                    logo=None))
+        login_url = api.portal.get_registry_record(AnonForm.login_url_key)
+        self.assertEqual(TEST_URL, login_url)
+        transaction.commit()
+
+        # Now we test if the login disappeared
+        browser = Browser(self.portal)
+        self.logout(browser)
+        browser.open(self.portal_url)
+        self.assertNotIn('Login', browser.contents)
 
     def test_set_logo(self):
         """Test setting and deleting the logo."""
