@@ -4,6 +4,9 @@ Changelog
 1.7.9 - Unreleased
 -------------------------
 
+- Adds customizable login, sign up and help urls.
+  [Jose Dinuncio]
+
 1.7.8 - December 06, 2013
 -------------------------
 
